# CPA1110

./: LICENSE  README.md  pyproject.toml
cpa1110/: __init__.py  attributes.py  device.py  enums.py  exceptions.py
tests/: test_device.py
