[tool.poetry]
name = "cpa1110"
version = "0.1.0"
description = ""
authors = ["ograsdijk <o.grasdijk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymodbus = "^3.0.0"
pyserial-asyncio = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "pymodbus.*",
]
ignore_missing_imports = true