[project]
name = "cpa1110"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ograsdijk", email = "o.grasdijk@gmail.com" }]
dependencies = [
    "pymodbus>=3.0.0,<4.0.0",
    "pyserial-asyncio>=0.6,<0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = [
    "pymodbus.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88